correccion de errores y comentarios

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>Gerardo Valentino</h1>
         <h1>NUA: 147691</h1>
         <h2 class="music-name">Song 1</h2>
-        <p class="artist.name">Artist</p>
+        <p class="artist-name">Artist</p>
 
         <div class="disk"></div>
         <div class="song-slider">
